[gd_scene load_steps=16 format=3 uid="uid://227gpca37dhl"]

[ext_resource type="PackedScene" uid="uid://3kjk4w0wer4" path="res://player/BaseCharacter/base_character.tscn" id="1_1c120"]
[ext_resource type="Script" path="res://UI/Menues/Skripts/CharacterSelection.gd" id="2_c618p"]

[sub_resource type="BoxMesh" id="BoxMesh_83x61"]
size = Vector3(100, 0.01, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3608h"]
albedo_color = Color(0.162812, 0.122062, 0.0628289, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5olvj"]
size = Vector3(100, 0.01, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xk351"]
albedo_color = Color(0.164706, 0.121569, 0.0627451, 1)

[sub_resource type="GDScript" id="GDScript_6mj1q"]
script/source = "extends CharacterBody3D

@onready var animation_player: AnimationPlayer = $AnimationPlayer
@onready var armature: Node3D = $Armature
@onready var spring_arm_pivot: Node3D = $SpringArmPivot
@onready var spring_arm: SpringArm3D = $SpringArmPivot/SpringArm3D
@onready var anim_tree: AnimationTree = $AnimationTree
@onready var actionable_finder: Area3D = $Direction/ActionableFinder
@onready var phone_camera: Camera3D = $PhoneCamera

const SPEED = 30.0
const JUMP_VELOCITY = 4.5
const LERP_VAL = .15

var can_move: bool = true

var skin_colors = [
	Color(0.98, 0.9, 0.78),   # Very light cream 
	Color(0.95, 0.82, 0.65),  # Light 
	Color(0.75, 0.6, 0.45),   # Tan 
	Color(0.45, 0.35, 0.25),  # Medium brown 
	Color(0.28, 0.2, 0.12)    # Dark brown 
]

var hair_styles = [
	$Armature/Skeleton3D/Hair1,
	$Armature/Skeleton3D/Hair2,
	$Armature/Skeleton3D/Hair3,
	$Armature/Skeleton3D/Hair4,
	$Armature/Skeleton3D/Hair5,
	$Armature/Skeleton3D/Hair6
]

var pant_colors = [
	Color(0.05, 0.05, 0.05),     # Black
	Color(0.6, 0.8, 1.0),        # Light Blue
	Color(0.1, 0.2, 0.4),        # Dark Blue
	Color(0.9, 0.85, 0.7),       # Light Beige
	Color(0.6, 0.5, 0.35)        # Dark Beige
]

var shirt_colors = [
	Color(0.95, 0.95, 0.95),     # Off-White / Light Gray-White
	Color(0.05, 0.05, 0.05),     # Black
	Color(0.7, 0.5, 0.1),        # Muted Orange
	Color(0.5, 0.0, 0.0),        # Dark Red
	Color(0.15, 0.3, 0.15),      # Muted Green
	Color(0.1, 0.2, 0.4),        # Desaturated Blue
	Color(0.5, 0.3, 0.4),        # Dusty Pink
	Color(0.7, 0.6, 0.1)         # Warm Muted Yellow
]

var shoes_colors = [
	Color(0.95, 0.95, 0.95),     # Off-White / Light Gray-White
	Color(0.05, 0.05, 0.05),     # Black
	Color(0.4, 0.3, 0.2),        # Dark Brown
	Color(0.7, 0.55, 0.4),       # Light Brown / Tan
	Color(0.2, 0.3, 0.5)         # Muted Navy Blue
]

var current_skin_index = 0
var current_hair_index = 0
var current_pant_index = 0
var current_shirt_index = 0
var current_shoes_index = 0
var prev_hair

func _ready():
	add_to_group(\"player\")
	prev_hair = hair_styles[current_hair_index]
	
	if GameState.is_mobile and get_tree().current_scene.name != \"CharacterSelection\":
		phone_camera.current = true
		
func _unhandled_input(event: InputEvent) -> void:
	# Mouse control viewpoint
	if event is InputEventMouseMotion:
		spring_arm_pivot.rotate_y(-event.relative.x * .001)
		spring_arm.rotate_x(-event.relative.y * .001)
		# No infinite rotation
		spring_arm.rotation.x = clamp(spring_arm.rotation.x, -PI/4, PI/4)
		
	if Input.is_action_just_pressed(\"interact\"):
		var actionables = actionable_finder.get_overlapping_areas()
		if actionables.size() > 0:
			actionables[0].action()
			return

func _physics_process(delta: float) -> void:
	if !can_move:
		return
		
	# Handle jump.
	if Input.is_action_just_pressed(\"jump\") and is_on_floor():
		velocity.y = JUMP_VELOCITY
	
	# Add the gravity.
	if not is_on_floor():
		velocity += get_gravity() * delta

	# Get the input direction and handle the movement/deceleration.
	# As good practice, you should replace UI actions with custom gameplay actions.
	var input_dir := Input.get_vector(\"left\", \"right\", \"up\", \"down\")
	var direction := (transform.basis * Vector3(input_dir.x, 0, input_dir.y)).normalized()
	# Mouse control direction of character
	direction = direction.rotated(Vector3.UP, spring_arm_pivot.rotation.y)
	if direction:
		velocity.x = lerp(velocity.x, direction.x * SPEED, LERP_VAL)
		velocity.z = lerp(velocity.z, direction.z * SPEED, LERP_VAL)
		armature.rotation.y = lerp_angle(armature.rotation.y, atan2(-velocity.x, -velocity.z), LERP_VAL)
	else:
		velocity.x = lerp(velocity.x, 0.0, LERP_VAL)
		velocity.z = lerp(velocity.z, 0.0, LERP_VAL)
		
	anim_tree.set(\"parameters/BlendSpace1D/blend_position\", velocity.length() / SPEED)

	move_and_slide()
	
func in_dialogue():
	velocity = Vector3.ZERO
	anim_tree.set(\"parameters/BlendSpace1D/blend_position\", 0.0)
	can_move = false
	
func end_dialoque():
	can_move = true
	
func change_skin_color(direction: int):
	current_skin_index = (current_skin_index + direction) % skin_colors.size()
	if current_skin_index < 0:
		current_skin_index = skin_colors.size() - 1
	update_skin_color()

func update_skin_color():
	var skin = $Armature/Skeleton3D/Body
	if skin == null:
		print(\"skin not found\")
		return
		
	var material = skin.get_surface_override_material(0)
	
	if material == null:
		material = skin.get_active_material(0).duplicate()
		skin.set_surface_override_material(0, material)

	material.albedo_color = skin_colors[current_skin_index]

func change_hair(direction: int):
	current_hair_index = (current_hair_index + direction) % hair_styles.size()
	if current_hair_index < 0:
		current_hair_index = hair_styles.size() - 1
	update_hair_style()
		
func update_hair_style():
	prev_hair.visible = false
	var current_hair = hair_styles[current_hair_index]
	current_hair.visible = true
	prev_hair = current_hair

func change_pant_color(direction: int):
	current_pant_index = (current_pant_index + direction) % pant_colors.size()
	if current_pant_index < 0:
		current_pant_index = pant_colors.size() - 1
	update_pant_color()

func update_pant_color():
	var pant = $Armature/Skeleton3D/Pants1
	var material = pant.get_surface_override_material(0)
	if material == null:
		material = pant.get_active_material(0).duplicate()
		pant.set_surface_override_material(0, material)
	material.albedo_color = pant_colors[current_pant_index]

func change_shirt_color(direction: int):
	current_shirt_index = (current_shirt_index + direction) % shirt_colors.size()
	if current_shirt_index < 0:
		current_shirt_index = shirt_colors.size() - 1
	update_shirt_color()	
	
func update_shirt_color():
	var shirt = $Armature/Skeleton3D/Shirt
	var material = shirt.get_surface_override_material(0)
	if material == null:
		material = shirt.get_active_material(0).duplicate()
		shirt.set_surface_override_material(0, material)
	material.albedo_color = shirt_colors[current_shirt_index]
	
func change_shoes_color(direction: int):
	current_shoes_index = (current_shoes_index + direction) % shoes_colors.size()
	if current_shoes_index < 0:
		current_shoes_index = shoes_colors.size() - 1
	update_shoes_color()

func update_shoes_color():
	var shoes = $Armature/Skeleton3D/Shoe
	var material = shoes.get_surface_override_material(0)
	if material == null:
		material = shoes.get_active_material(0).duplicate()
		shoes.set_surface_override_material(0, material)
	material.albedo_color = shoes_colors[current_shoes_index]

func update_character(skin_index: int, hair_index: int, pant_index: int, shirt_index: int, shoes_index: int):
	#Set correct skin color
	var skin = $Armature/Skeleton3D/Body
	var skin_material = skin.get_surface_override_material(0)
	if skin_material == null:
		var base_mat = skin.get_active_material(0)
		if base_mat != null:
			skin_material = base_mat.duplicate()
			skin.set_surface_override_material(0, skin_material)
	if skin_material != null:
		skin_material.albedo_color = skin_colors[skin_index]
	
	#Set correct hair style
	for hair in hair_styles:
		hair.visible = false
	var current_hair = hair_styles[hair_index]
	current_hair.visible = true
	
	#Set correct pant color
	var pants = $Armature/Skeleton3D/Pants1
	var pants_material = pants.get_surface_override_material(0)
	if pants_material == null:
		var active_material = pants.get_active_material(0)
		if active_material != null:
			pants_material = active_material.duplicate()
			pants.set_surface_override_material(0, pants_material)
	if pants_material != null:
		pants_material.albedo_color = pant_colors[pant_index]
	
	#Set correct shirt color
	var shirt = $Armature/Skeleton3D/Shirt
	var shirt_material = shirt.get_surface_override_material(0)
	if shirt_material == null:
		var active_material = shirt.get_active_material(0)
		if active_material != null:
			shirt_material = active_material.duplicate()
			shirt.set_surface_override_material(0, shirt_material)
	if shirt_material != null:
		shirt_material.albedo_color = shirt_colors[shirt_index]
	
	#Set correct shoes color
	var shoes = $Armature/Skeleton3D/Shoe
	var shoes_material = shoes.get_surface_override_material(0)
	if shoes_material == null:
		var active_material = shoes.get_active_material(0)
		if active_material != null:
			shoes_material = active_material.duplicate()
			shoes.set_surface_override_material(0, shoes_material)
	if shoes_material != null:
		shoes_material.albedo_color = shoes_colors[shoes_index]	
	
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fnv1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyrn8"]
bg_color = Color(0.756863, 0.631373, 0.458824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mojp0"]
bg_color = Color(0.564706, 0.454902, 0.298039, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q25x"]
bg_color = Color(0.909804, 0.831373, 0.72549, 0.796078)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_00p4j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucf7c"]
bg_color = Color(0.757279, 0.632418, 0.459061, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6rkq"]
bg_color = Color(0.563474, 0.454029, 0.299765, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6s5ri"]
bg_color = Color(0.909804, 0.831373, 0.72549, 0.796078)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="CharacterSelection" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.999961, 0, 0.00877878, 0.00736834, 0.543614, 0.839303, -0.00477227, 0.839335, -0.543593, 0, 13.3781, -44.6595)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_83x61")
surface_material_override/0 = SubResource("StandardMaterial3D_3608h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_5olvj")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 9.99416, 9.95541)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00785065, 0.0373764, -0.121883)
mesh = SubResource("BoxMesh_83x61")
surface_material_override/0 = SubResource("StandardMaterial3D_xk351")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
shape = SubResource("BoxShape3D_5olvj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, 8.74228e-08, 1, 8.74228e-08, 7.64274e-15, 8.74228e-08, -1, 0, 5.8102, -11.5114)
current = true

[node name="BaseCharacter" parent="." instance=ExtResource("1_1c120")]
transform = Transform3D(-6, 0, -5.24537e-07, 0, 6, 0, 5.24537e-07, 0, -6, 0, 0, 0)
script = SubResource("GDScript_6mj1q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_c618p")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 18.0
offset_top = 31.0
offset_right = 199.0
offset_bottom = 346.0
theme_override_constants/separation = 20

[node name="Hair" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
toggle_mode = true
text = "Hair"

[node name="Skin" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
toggle_mode = true
text = "Skin color"

[node name="Shirt" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
toggle_mode = true
text = "Shirt
"

[node name="Pants" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
toggle_mode = true
text = "Pants
"

[node name="Shoes" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
toggle_mode = true
text = "Shoes"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
text = "Continue"

[node name="GoBack" type="Button" parent="CanvasLayer/Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fnv1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yyrn8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mojp0")
theme_override_styles/normal = SubResource("StyleBoxFlat_2q25x")
text = "Go back"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -69.0
offset_right = 140.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 120

[node name="Left" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_00p4j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ucf7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k6rkq")
theme_override_styles/normal = SubResource("StyleBoxFlat_6s5ri")
text = "  <  "

[node name="Right" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_00p4j")
theme_override_styles/hover = SubResource("StyleBoxFlat_ucf7c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k6rkq")
theme_override_styles/normal = SubResource("StyleBoxFlat_6s5ri")
text = "  >  "

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Hair" to="CanvasLayer/Control" method="_on_hair_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Skin" to="CanvasLayer/Control" method="_on_skin_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Shirt" to="CanvasLayer/Control" method="_on_shirt_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Pants" to="CanvasLayer/Control" method="_on_pants_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Shoes" to="CanvasLayer/Control" method="_on_shoes_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/Continue" to="CanvasLayer/Control" method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer2/GoBack" to="CanvasLayer/Control" method="_on_go_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Left" to="CanvasLayer/Control" method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Right" to="CanvasLayer/Control" method="_on_right_pressed"]
